--- a/frog-game/index.html
+++ b/frog-game/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a href="#" class="sound" data-sound="true"> sound ? </a>
     <div class="wrapper">
         <canvas id="layer1"></canvas>
         <canvas id="layer2"></canvas>
